@@ -18,6 +18,7 @@
 
 package org.apache.hadoop.lib.wsrs;
 
+import org.apache.commons.io.Charsets;
 import org.apache.hadoop.classification.InterfaceAudience;
 import org.json.simple.JSONObject;
 
@@ -54,11 +55,10 @@ public class JSONMapProvider implements MessageBodyWriter<Map> {
   }
 
   @Override
-  public void writeTo(Map map, Class<?> aClass, Type type,
-      Annotation[] annotations, MediaType mediaType,
-      MultivaluedMap<String, Object> stringObjectMultivaluedMap,
-      OutputStream outputStream) throws IOException, WebApplicationException {
-    Writer writer = new OutputStreamWriter(outputStream);
+  public void writeTo(Map map, Class<?> aClass, Type type, Annotation[] annotations,
+                      MediaType mediaType, MultivaluedMap<String, Object> stringObjectMultivaluedMap,
+                      OutputStream outputStream) throws IOException, WebApplicationException {
+    Writer writer = new OutputStreamWriter(outputStream,  Charsets.UTF_8);
     JSONObject.writeJSONString(map, writer);
     writer.write(ENTER);
     writer.flush();
